excersise 8 part 2 done may come back to tidy things up later
