# src/index.js
@@ -1,42 +1,40 @@
-const userRoutes = require('./routes/userRoutes');
-const express = require('express')
+const userRoutes = require("./routes/userRoutes");
+const express = require("express");
 // const app = express()
 // const port = [3000, 3009, 3007]
 // index.js - updated version
 // import the app
 
-const swaggerUi = require('swagger-ui-express');
-swaggerDocument = require('../swagger.json');
+const swaggerUi = require("swagger-ui-express");
+swaggerDocument = require("../swagger.json");
 
+const app = require("./app");
+const port = 3000;
 
-const app = require('./app');
-const port = 3000
+app.use("/api-docs", swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
-const fakeEcomWebsite = require('./routes/RoutesFakeEcomWebsite')
+const testRoutes = require("./routes/myTestRoutes");
+const calculatorRoutes = require("./routes/calculatorRoutes");
 
+const { getApiData } = require("../src/Middleware/api");
 
-app.use(
-    '/api-docs',
-    swaggerUi.serve,
-    swaggerUi.setup(swaggerDocument)
-    );
-
-const testRoutes =
-require('./routes/myTestRoutes');
-const calculatorRoutes =
-require('./routes/calculatorRoutes');
+const {
+  getWebsiteData,
+} = require("../src/controllers/ControllerFakeEcomWebsite");
 
 // parse requests of content-type - application/json
 app.use(express.json());
 
-app.use('/users', userRoutes);
+app.use("/users", userRoutes);
 
-app.use('/', express.static('public'))
+app.use("/", express.static("public"));
 
 // map the calculator routes to our app
-app.use('/calculator', calculatorRoutes);
+app.use("/calculator", calculatorRoutes);
 
-app.use('/FakeEcom', fakeEcomWebsite)
+app.get("/renderData", getWebsiteData);
+
+app.get("/api", getApiData);
 
 // port.forEach((item) => {
 
@@ -51,12 +49,10 @@ app.use('/FakeEcom', fakeEcomWebsite)
 // })
 // })
 
-
 // start the app to listen on the right port
 app.listen(port, () => {
-    console.log(`Example app listening at
-    http://localhost:${port}`)
-    })
+  console.log(`Example app listening at
+    http://localhost:${port}`);
+});
 // node .\index.js
-// npm run start     --created of the above 
-
+// npm run start     --created of the above
